--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content=" Météo du jour et de la semaine donnée par l'API Open-meteo.com et météo France "
+    />
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>O'clock - Spe React modele</title>
+
+    <title>Météo du jour et de la semaine</title>
   </head>
   <body>
     <div id="root"></div>
